<resources>
    <string name="app_name">CS3270A8 Wesley Hooker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID:</string>
    <string name="name_required">Name (Required):</string>
    <string name="name">Name:</string>
    <string name="course_code">Course Code:</string>
    <string name="start_at">Start At:</string>
    <string name="end_at">End At::</string>
    <string name="end_att">End At:</string>
    <string name="add_course">Add Course</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save_course">Save Course</string>
    <string name="update_course">Update Course</string>
    <string name="deleteCourse">Delete</string>
    <string name="DeleteDialogMessage">This will permanently delete the course.</string>
    <string name="DeleteDialogTitle">Delete Course?</string>
    <string name="DeleteDialogNeg">Cancel</string>
</resources>
