<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".CourseViewFragment"
        android:orientation="vertical"
        android:background="#FAFAFA"
        android:clickable="true"
        >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textAlignment="viewEnd"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"/>

            <android.support.design.widget.TextInputLayout
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomStart="@dimen/cardview_default_elevation"
                app:boxCornerRadiusTopEnd="@dimen/cardview_default_elevation"
                app:boxCornerRadiusBottomEnd="@dimen/cardview_default_elevation"
                app:boxCornerRadiusTopStart="@dimen/cardview_default_elevation"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/edt_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="viewEnd"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"/>

            <android.support.design.widget.TextInputLayout
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomStart="@dimen/cardview_default_elevation"
                app:boxCornerRadiusTopEnd="@dimen/cardview_default_elevation"
                app:boxCornerRadiusBottomEnd="@dimen/cardview_default_elevation"
                app:boxCornerRadiusTopStart="@dimen/cardview_default_elevation"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/course_code"
                android:textAlignment="viewEnd"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"/>

            <android.support.design.widget.TextInputLayout
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomStart="@dimen/cardview_default_elevation"
                app:boxCornerRadiusTopEnd="@dimen/cardview_default_elevation"
                app:boxCornerRadiusBottomEnd="@dimen/cardview_default_elevation"
                app:boxCornerRadiusTopStart="@dimen/cardview_default_elevation"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/edt_course_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/start_at"
                android:textAlignment="viewEnd"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"/>

            <android.support.design.widget.TextInputLayout
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomStart="@dimen/cardview_default_elevation"
                app:boxCornerRadiusTopEnd="@dimen/cardview_default_elevation"
                app:boxCornerRadiusBottomEnd="@dimen/cardview_default_elevation"
                app:boxCornerRadiusTopStart="@dimen/cardview_default_elevation"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/edt_start_at"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/end_att"
                android:textAlignment="viewEnd"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"/>

            <android.support.design.widget.TextInputLayout
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomStart="@dimen/cardview_default_elevation"
                app:boxCornerRadiusTopEnd="@dimen/cardview_default_elevation"
                app:boxCornerRadiusBottomEnd="@dimen/cardview_default_elevation"
                app:boxCornerRadiusTopStart="@dimen/cardview_default_elevation"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/edt_end_at"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save"
                android:text="@string/update_course"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>


    </LinearLayout>

</ScrollView>
